--- a/default.hbs
+++ b/default.hbs
@@ -1,131 +1,116 @@
 <!DOCTYPE html>
-<html lang="{{@site.lang}}">
+<html>
 <head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    {{!-- Document Settings --}}
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>{{meta_title}}</title>
 
-    {{!-- Base Meta --}}
-    <title>{{meta_title}}</title>
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="HandheldFriendly" content="True" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    {{!-- Styles'n'Scripts --}}
-    <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
+	<link rel="stylesheet" type="text/css" href="{{asset "css/dependencies.css"}}" />
+	<link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
 
-    {{!-- This tag outputs SEO meta+structured data and other important settings --}}
-    {{ghost_head}}
-
+	{{ghost_head}}
 </head>
+
 <body class="{{body_class}}">
+	<div id="wrapper">
+		<div id="ajax-container">
+			<nav id="nav" class="nav">
+				<div class="nav-logo">
+					<a href="{{@site.url}}">
+						{{#if @site.logo}}
+						<img src="{{@site.logo}}" alt="{{t "Logo" }}" />
+						{{/if}}
+					</a>
+				
 
-    <div class="site-wrapper">
+					 <a href="http://localhost:2368/tag/getting-started/" class="navbar-item">Services</a>
+                     <a href="/" class="navbar-item">Contact</a>
+				</div>
+				<div class="nav-menu">
+			   {{#if @site.facebook}}
+			    <a class="facebook" href="{{facebook_url}}" title="{{@site.facebook}}"><i class="icon-facebook"></i></a>
+			   {{/if}}
+			   <a class="social-link social-link-ig fa-instagram" href="https://www.instagram.com/ghost/" title="Instagram" target="_blank" rel="noopener">{{> "icons/instagram"}}</a>
+			 <a class="rss" href="{{@site.url}}/rss/"><i class="icon-rss"></i></a>
+				</div>
+			</nav>
+			{{{body}}}
+			<div id="body-class" style="display: none;" class="{{body_class}}"></div>
+			<footer id="footer">
+				<section class="credits">
+					
+				</section>
+			</footer>
+			{{#if @site.navigation}}
+			{{navigation}}
+			{{/if}}
+		</div>
+	</div>
+	{{ghost_foot}}
 
-        {{!-- All the main content gets inserted here, index.hbs, post.hbs, etc --}}
-        {{{body}}}
+	<script type="text/javascript" src="{{asset "js/dependencies.js"}}"></script>
+	<script type="text/javascript" src="{{asset "js/script.js"}}"></script>
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-        {{!-- The footer at the very bottom of the screen --}}
-        <footer class="site-footer outer">
-            <div class="site-footer-content inner">
-                <section class="copyright"><a href="{{@site.url}}">{{@site.title}}</a> &copy; {{date format="YYYY"}}</section>
-                <nav class="site-footer-nav">
-                    <a href="{{@site.url}}">Latest Posts</a>
-                    {{#if @site.facebook}}<a href="{{facebook_url @site.facebook}}" target="_blank" rel="noopener">Facebook</a>{{/if}}
-                    {{#if @site.twitter}}<a href="{{twitter_url @site.twitter}}" target="_blank" rel="noopener">Twitter</a>{{/if}}
-                    <a href="">LinkedIn</a>
-                    
-                </nav>
-            </div>
-        </footer>
+	<title>{{meta_title}}</title>
 
-    </div>
+	<meta name="HandheldFriendly" content="True" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    {{!-- The big email subscribe modal content --}}
-    {{#if @labs.members}}
-    <div class="subscribe-success-message">
-        <a class="subscribe-close" href="javascript:;"></a>
-        You've successfully subscribed to {{@site.title}}!
-    </div>
+	<link rel="stylesheet" type="text/css" href="{{asset "css/dependencies.css"}}" />
+	<link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
 
-    <div id="subscribe" class="subscribe-overlay">
-        <a class="subscribe-close-overlay" href="#"></a>
-        <a class="subscribe-close-button" href="#"></a>
-        <div class="subscribe-overlay-content">
-            {{#if @site.logo}}
-                <img class="subscribe-overlay-logo" src="{{@site.logo}}" alt="{{@site.title}}" />
-            {{/if}}
-            <div class="subscribe-form">
-                <h1 class="subscribe-overlay-title">Subscribe to {{@site.title}}</h1>
-                <p class="subscribe-overlay-description">Stay up to date! Get all the latest & greatest posts delivered straight to your inbox</p>
-                <form data-members-form="subscribe">
-                    <div class="form-group">
-                        <input class="subscribe-email" data-members-email placeholder="youremail@example.com"
-                            autocomplete="false" />
-                        <button class="button primary" type="submit">
-                            <span class="button-content">Subscribe</span>
-                            <span class="button-loader">{{> "icons/loader"}}</span>
-                        </button>
-                    </div>
-                    <div class="message-success">
-                        <strong>Great!</strong> Check your inbox and click the link to confirm your subscription.
-                    </div>
-                    <div class="message-error">
-                        Please enter a valid email address!
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    {{/if}}
+	{{ghost_head}}
+</head>
 
-    {{!-- jQuery, required for fitvids --}}
-    <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous">
-    </script>
-    {{!-- Fitvids (for responsive video embeds), infinite scroll, floating header, and gallery card support --}}
-    <script src="{{asset "built/casper.js"}}"></script>
+<body class="{{body_class}}">
+	<div id="wrapper">
+		<div id="ajax-container">
+			<nav id="nav" class="nav">
+				<div class="nav-logo">
+					<a href="{{@site.url}}">
+						{{#if @site.logo}}
+						<img src="{{@site.logo}}" alt="{{t "Logo" }}" />
+						{{/if}}
+					</a>
+				
 
-    {{!-- Scripts for Members subscription --}}
-    <script>
-        // Parse the URL parameter
-        function getParameterByName(name, url) {
-            if (!url) url = window.location.href;
-            name = name.replace(/[\[\]]/g, "\\$&");
-            var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-                results = regex.exec(url);
-            if (!results) return null;
-            if (!results[2]) return '';
-            return decodeURIComponent(results[2].replace(/\+/g, " "));
-        }
+					 <a href="http://localhost:2368/tag/getting-started/" class="navbar-item">Services</a>
+                     <a href="/" class="navbar-item">Contact</a>
+				</div>
+				<div class="nav-menu">
+			   {{#if @site.facebook}}
+			    <a class="facebook" href="{{facebook_url}}" title="{{@site.facebook}}"><i class="icon-facebook"></i></a>
+			   {{/if}}
+			   <a class="social-link social-link-ig fa-instagram" href="https://www.instagram.com/ghost/" title="Instagram" target="_blank" rel="noopener">{{> "icons/instagram"}}</a>
+			 <a class="rss" href="{{@site.url}}/rss/"><i class="icon-rss"></i></a>
+				</div>
+			</nav>
+			{{{body}}}
+			<div id="body-class" style="display: none;" class="{{body_class}}"></div>
+			<footer id="footer">
+				<section class="credits">
+					
+				</section>
+			</footer>
+			{{#if @site.navigation}}
+			{{navigation}}
+			{{/if}}
+		</div>
+	</div>
+	{{ghost_foot}}
 
-        // Give the parameter a variable name
-        var action = getParameterByName('action');
-
-        $(document).ready(function () {
-            if (action == 'subscribe') {
-                $('body').addClass("subscribe-success");
-            }
-
-            $('.subscribe-success-message .subscribe-close').click(function () {
-                $('.subscribe-success-message').addClass('close');
-            });
-
-            // Reset form on opening subscrion overlay
-            $('.subscribe-button').click(function() {
-                $('.subscribe-overlay form').removeClass();
-                $('.subscribe-email').val('');
-            });
-        });
-    </script>
-
-    {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
-    {{{block "scripts"}}}
-
-    {{!-- Ghost outputs important scripts and data with this tag - it should always be the very last thing before the closing body tag --}}
-    {{ghost_foot}}
-
+	<script type="text/javascript" src="{{asset "js/dependencies.js"}}"></script>
+	<script type="text/javascript" src="{{asset "js/script.js"}}"></script>
 </body>
 </html>
